metrics/network-policy-monitoring-allow-ingress-thanos-querier-from-prometheus-adapter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: monitoring-allow-ingress-thanos-querier-from-prometheus-adapter
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: thanos-querier
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: my-adapter
              app.kubernetes.io/name: prometheus-adapter
      ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 10902
